crates/biome_cli/tests/snapshots/main_commands_format/format_omits_json_trailing_comma.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "json": {
    "parser": { "allowTrailingCommas": true },
    "formatter": { "trailingComma": "none" }
  }
}
```

## `file.json`

```json
{
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar",
	"loreum_ipsum_lorem_ipsum": "bar"
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```


