crates/biome_cli/tests/snapshots/main_commands_format/format_package_json.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write --indent-style=space package.json
```

## `package.json`

```json
{
  "name": "@foo/package",
  "dependencies": {
    "foo": "latest"
  }
}

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
