crates/biome_cli/tests/snapshots/main_commands_format/format_skip_errors_continues_with_valid_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `invalid.js`

```js
while ) {}
```

## `valid.js`

```js
statement();

```

# Emitted Messages

```block
invalid.js parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Skipped file with syntax errors
  

```

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
