crates/biome_cli/tests/snapshots/main_commands_format/format_skip_parse_errors_continues_with_valid_files.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --skip-parse-errors --write valid.js invalid.js
```

## `invalid.js`

```js
while ) {}
```

## `valid.js`

```js
statement();

```

# Emitted Messages

```block
invalid.js parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Skipped file with syntax errors
  

```

```block
Formatted 1 file in <TIME>. Fixed 1 file.
Found 1 info.
```
