crates/biome_cli/tests/snapshots/main_commands_format/format_stdin_diagnostics_use_paths_relative_to_the_working_directory.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --stdin-file-path=src/example.js
```

# Input messages

```block
const value = {
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Code formatting aborted due to parsing errors. To format code with errors, enable the 'formatter.formatWithErrors' option.
  


```

# Emitted Messages

```block
src/example.js:1:16 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `}` but instead the file ends
  
  > 1 │ const value = {
      │                
  
  i the file ends here
  
  > 1 │ const value = {
      │                
  

```
