crates/biome_cli/tests/snapshots/main_commands_format/format_stdin_does_not_error_with_ignore_unknown_file_extensions.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --stdin-file-path mock.cc --files-ignore-unknown true
```

# Input messages

```block
function f() {return{}}
```

# Emitted Messages

```block
function f() {return{}}
```

```block
The content was not formatted because the path `mock.cc` is ignored.
```
