crates/biome_cli/tests/snapshots/main_commands_format/format_stdin_errors_with_no_file_extension.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --stdin-file-path mock
```

# Input messages

```block
function f() {return{}}
```

# Emitted Messages

```block
stdin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! The file passed via --stdin-file-path doesn't have an extension. Biome needs a file extension to know how to handle the file.
  

```

```block
function f() {return{}}
```
