crates/biome_cli/tests/snapshots/main_commands_format/format_stdin_formats_virtual_path_outside_includes.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --stdin-file-path=a.tsx
```

## `biome.json`

```json
{
  "files": {
    "includes": ["apps/**/*.{ts,tsx}", "packages/**/*.{ts,tsx}"]
  },
  "formatter": {
    "enabled": true
  }
}
```

# Input messages

```block
function f() {return{}}
```

# Emitted Messages

```block
function f() {
	return {};
}

```
