crates/biome_cli/tests/snapshots/main_commands_format/format_stdin_ignores_includes_pattern.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{ "formatter": { "includes": ["apps/**"] } }
```

# Input messages

```block
function f() {return{}}
```

# Emitted Messages

```block
function f() {
	return {};
}

```
