crates/biome_cli/tests/snapshots/main_commands_format/format_stdin_keeps_non_ascii_source.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
# Input messages

```block
const a = "⚠✔"
```

# Emitted Messages

```block
const a = "⚠✔";

```
